Change in osh culture queries that return Macedonia concat string in a particular way. Minor fixes in datasources and dates while maximizing charts. Fixed alignment and axis size on dynamic orientated charts.

--- a/static/custom/scss/common.scss
+++ b/static/custom/scss/common.scss
@@ -1522,6 +1522,7 @@
             font-size: 1.4rem;
             text-align: center;
             font-style: italic;
+            float:left;
             padding:1rem 0.5rem;
             width: 100%;
             padding: 1rem 13rem;
